z-index bugssss

--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
   top: 0;
   height: 40px;
   width: 100%;
+  z-index: 200;
   background-color: #FFF;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.20);
 }
