--- a/css/thumbnails.css
+++ b/css/thumbnails.css
@@ -128,6 +128,7 @@
   float: right;
   background-color: #212121;
   opacity: .001;
+  z-index: -10;
   border: 1px solid #212121;
   border-radius: 4px;
 }
@@ -198,6 +199,9 @@
   .overlay {
     width: 40%;
     margin: 4%;
+  }
+  .invisible, .tn6 {
+    display: none;
   }
 }
 
